syntax = "proto3";

option csharp_namespace = "GrpcChat";

import "google/protobuf/timestamp.proto";

package GrpcChat;

service Chat {
  rpc SendMessage (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  google.protobuf.Timestamp time = 1;
  string name = 2;
  string text = 3;
}
